[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "lettergame"
version = "1.0.0"
authors = [
  { name="xorwow", email="pip@xorwow.de" },
]
description = "Play a word-guessing game"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "termcolor"
]

[project.scripts]
lettergame = "lettergame.game:main"

[project.urls]
Homepage = "https://github.com/xorwow/lettergame"
Issues = "https://github.com/xorwow/lettergame/issues"
